--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@
     </section>
     <!-- What are we doing -->
     <section >
-      <h2 class="section-title what-we">Чем мы занимаемся</h2>
+      <h2 class="section-title caption">Чем мы занимаемся</h2>
       <img src="./img/1.jpg" alt="ноутбук" width="380" height="294" />
-      <p><a href="" class="what-doing"> Десктопные приложения</a></p>
+      <p><a href="" class="list-section"> Десктопные приложения</a></p>
       <img src="./img/2.jpg" alt="мобильный" width="380" height="294" />
-      <p><a href="" class="what-doing">Мобильные приложения</a></p>
+      <p><a href="" class="list-section">Мобильные приложения</a></p>
       <img src="./img/3.jpg" alt="монитор" width="380" height="294" />
-      <p><a href="" class="what-doing">Дизайнерские решения</a></p>
+      <p><a href="" class="list-section">Дизайнерские решения</a></p>
     </section>
     <!-- team -->
     <section class="section team">
-      <h3 class="section-title what-we">Наша команда</h3>
+      <h3 class="section-title caption">Наша команда</h3>
       <img src="./img/Джонсмит.jpg" alt="Джон Смит" width="278" height="260" />
-      <h3 class="section-title name">Джон Смит</h3>
+      <h3 class="section-title name-section">Джон Смит</h3>
       <p>Дизайнер продуктов</p>
       <ul class="section-title list">
         <li><a href="" class="link color " aria-label="ссылка на Инстаграм">Инстаграм</a></li>
@@ -97,7 +97,7 @@
         <li><a href="" class="link color" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
       <img src="./img/марта.jpg" alt="Марта Стюарт" width="278" height="260" />
-      <h3 class="section-title name">Марта Стюарт</h3>
+      <h3 class="section-title name-section">Марта Стюарт</h3>
       <p>Фронтенд Разработчик</p>
       <ul class="section-title list">
         <li><a href="" class="link color" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
@@ -111,7 +111,7 @@
         width="278"
         height="260"
       />
-      <h3 class="section-title name">Роберт Джекис</h3>
+      <h3 class="section-title name-section">Роберт Джекис</h3>
       <p>Маркетинг</p>
       <ul class="section-title list ">
         <li ><a href="" class="link color" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
@@ -120,7 +120,7 @@
         <li><a href="" class="link color" aria-label="ссылка на Линкеди">Линкедин</a></li>
       </ul>
       <img src="./img/мартин.jpg" alt="Мартин Доу" width="278" height="260" />
-      <h3 class="section-title name">Мартин Доу</h3>
+      <h3 class="section-title name-section">Мартин Доу</h3>
       <p>Разработка пользовательского интерфейса</p>
       <ul class="section-title list">
         <li><a href="" class="link color" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
