--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
-<!DOCTYPE >
-<html lang="кг">
+<!DOCTYPE html>
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,7 +19,7 @@
         </a>
         <ul class="web-title list">
           <li><a href="./index.html" class="link">Студия</a></li>
-          <li li class="menu__li active" data-menuanchor="secondPage">
+          <li class="menu__li active" data-menuanchor="secondPage">
             <a href="./portfolio.html" class="link">Портфолио</a>
           </li>
           <li><a href="" class="link">Контакты</a></li>
@@ -39,7 +39,7 @@
       <div class="Portfolio-button">
         <ul class="list">
           <li>
-            <button type="button" class="button-portfolio ol">Все</button>
+            <button type="button" class="button-portfolio all">Все</button>
           </li>
           <li>
             <button type="button" class="button-portfolio web-site">
