--- a/index.html
+++ b/index.html
@@ -4,40 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body class="body">
     <!-- website head -->
-    <header >
+    <header>
       <nav class="nav-text">
-        <a href="./index.html" class="section-logo"> <span class="web-logo"> Web</span> Studio </a>
+        <a href="./index.html" class="section-logo">
+          <span class="web-logo"> Web</span> Studio
+        </a>
         <ul class="web-title list">
-          <li class='menu__li active' data-menuanchor="firstPage">
-          <a href="#" class="link ">Студия</a></li>
+          <li class="menu__li active" data-menuanchor="firstPage">
+            <a href="#" class="link">Студия</a>
+          </li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
-        <ul class="info-title list" >
+        <ul class="info-title list">
           <li>
             <a href="mailto:info@devstudio.com ">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111" > +38 096 111 11 11</a>
+            <a href="tel:+380961111111"> +38 096 111 11 11</a>
           </li>
         </ul>
       </nav>
     </header>
     <!-- section one  -->
     <section class="section-one">
-      <h1 >эффективные решения <br> для вашего бизнеса</h1>
+      <h1>
+        эффективные решения <br />
+        для вашего бизнеса
+      </h1>
       <a href="" class="button one">Заказать услугу</a>
     </section>
     <!-- section too -->
     <section class="section-too">
-      <ul class="list" >
+      <ul class="list">
         <li>
-          <a href="" class="link"><img src="./img/antenka.svg" alt="Антена" /></a>
+          <a href="" class="link"
+            ><img src="./img/antenka.svg" alt="Антена"
+          /></a>
 
           <h2 class="section-title">Внимание к деталям</h2>
           <p>
@@ -76,111 +87,227 @@
       </ul>
     </section>
     <!-- What are we doing -->
-    <section >
+    <section>
       <h2 class="section-title caption">Чем мы занимаемся</h2>
       <ul class="list">
-        <li><img src="./img/1.jpg" alt="ноутбук" width="380" height="294" />
-      <p><a href="" class="list-section"> Десктопные приложения</a></p></li>
-        <li><img src="./img/2.jpg" alt="мобильный" width="380" height="294" />
-      <p><a href="" class="list-section">Мобильные приложения</a></p></li>
-        <li><img src="./img/3.jpg" alt="монитор" width="380" height="294" />
-      <p><a href="" class="list-section">Дизайнерские решения</a></p></li>
-                  </ul>
+        <li>
+          <img src="./img/1.jpg" alt="ноутбук" width="380" height="294" />
+          <p><a href="" class="list-section"> Десктопные приложения</a></p>
+        </li>
+        <li>
+          <img src="./img/2.jpg" alt="мобильный" width="380" height="294" />
+          <p><a href="" class="list-section">Мобильные приложения</a></p>
+        </li>
+        <li>
+          <img src="./img/3.jpg" alt="монитор" width="380" height="294" />
+          <p><a href="" class="list-section">Дизайнерские решения</a></p>
+        </li>
+      </ul>
     </section>
     <!--our team -->
     <section class="section-team">
       <h3 class="section-title caption">Наша команда</h3>
       <ul class="list">
-            <li> <img src="./img/Джонсмит.jpg" alt="Джон Смит" width="278" height="260" /></li>
-            <li> <h3 class="section-title name-section">Джон Смит</h3></li>
-            <li><p>Дизайнер продуктов</p> </li>
-        </ul>
-        <ul class="section-title list">
-             <li><a href="" class="link color " aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-             <li><a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a></li>
-             <li><a href="" class="link color" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-             <li><a href="" class="link color" aria-label="ссылка на Линкеди">Линкедин</a></li>
-      </ul>
-      <ul class="list">
-        <li> <img src="./img/марта.jpg" alt="Марта Стюарт" width="278" height="260" /></li>
-       <li> <h3 class="section-title name-section">Марта Стюарт</h3></li>
-       <li><p>Фронтенд Разработчик</p></li>
+        <li>
+          <img
+            src="./img/Джонсмит.jpg"
+            alt="Джон Смит"
+            width="278"
+            height="260"
+          />
+        </li>
+        <li><h3 class="section-title name-section">Джон Смит</h3></li>
+        <li><p>Дизайнер продуктов</p></li>
       </ul>
       <ul class="section-title list">
-        <li><a href="" class="link color" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-        <li><a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a></li>
-        <li><a href="" class="link color" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-        <li><a href="" class="link color" aria-label="ссылка на Линкеди">Линкедин</a></li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Инстаграм"
+            >Инстаграм</a
+          >
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a>
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Фейсбук "
+            >Фейсбук</a
+          >
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Линкеди"
+            >Линкедин</a
+          >
+        </li>
       </ul>
       <ul class="list">
-        <li> <img  src="./img/роберт.jpg" alt="Роберт Джекис"  width="278"  height="260"/></li>
-        <li> <h3 class="section-title name-section">Роберт Джекис</h3></li>
-        <li>  <p>Маркетинг</p></li>
+        <li>
+          <img
+            src="./img/марта.jpg"
+            alt="Марта Стюарт"
+            width="278"
+            height="260"
+          />
+        </li>
+        <li><h3 class="section-title name-section">Марта Стюарт</h3></li>
+        <li><p>Фронтенд Разработчик</p></li>
       </ul>
-      <ul class="section-title list ">
-        <li ><a href="" class="link color" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-        <li><a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a></li>
-        <li><a href="" class="link color" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-        <li><a href="" class="link color" aria-label="ссылка на Линкеди">Линкедин</a></li>
+      <ul class="section-title list">
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Инстаграм"
+            >Инстаграм</a
+          >
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a>
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Фейсбук "
+            >Фейсбук</a
+          >
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Линкеди"
+            >Линкедин</a
+          >
+        </li>
       </ul>
       <ul class="list">
-        <li> <img src="./img/мартин.jpg" alt="Мартин Доу" width="278" height="260" /></li>
-        <li> <h3 class="section-title name-section">Мартин Доу</h3></li>
-        <li> <p>Разработка пользовательского интерфейса</p></li>
+        <li>
+          <img
+            src="./img/роберт.jpg"
+            alt="Роберт Джекис"
+            width="278"
+            height="260"
+          />
+        </li>
+        <li><h3 class="section-title name-section">Роберт Джекис</h3></li>
+        <li><p>Маркетинг</p></li>
       </ul>
-        <ul class="section-title list">
-        <li><a href="" class="link color" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-        <li><a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a></li>
-        <li><a href="" class="link color" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-        <li><a href="" class="link color" aria-label="ссылка на Линкеди">Линкедин</a></li>
+      <ul class="section-title list">
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Инстаграм"
+            >Инстаграм</a
+          >
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a>
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Фейсбук "
+            >Фейсбук</a
+          >
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Линкеди"
+            >Линкедин</a
+          >
+        </li>
+      </ul>
+      <ul class="list">
+        <li>
+          <img
+            src="./img/мартин.jpg"
+            alt="Мартин Доу"
+            width="278"
+            height="260"
+          />
+        </li>
+        <li><h3 class="section-title name-section">Мартин Доу</h3></li>
+        <li><p>Разработка пользовательского интерфейса</p></li>
+      </ul>
+      <ul class="section-title list">
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Инстаграм"
+            >Инстаграм</a
+          >
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a>
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Фейсбук "
+            >Фейсбук</a
+          >
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Линкеди"
+            >Линкедин</a
+          >
+        </li>
       </ul>
     </section>
     <!-- Regular customers -->
-    <sectionс class="section" >
+    <section class="section">
       <h2 class="section-title what-we">Постоянные клиенты</h2>
       <ul class="section-title list">
         <li class="regular">
-          <a href="" class="link"><img src="./img/logo1.svg" alt="YA & CO" /></a>
+          <a href="" class="link"
+            ><img src="./img/logo1.svg" alt="YA & CO"
+          /></a>
         </li>
         <li class="regular">
-          <a href="" class="link"><img src="./img/logo2.svg" alt="Company tagline here" /></a>
+          <a href="" class="link"
+            ><img src="./img/logo2.svg" alt="Company tagline here"
+          /></a>
         </li>
         <li class="regular">
-          <a href="" class="link"><img src="./img/logo3.svg" alt="company" /></a>
+          <a href="" class="link"
+            ><img src="./img/logo3.svg" alt="company"
+          /></a>
         </li>
         <li class="regular">
-          <a href="" class="link"><img src="./img/logo4.svg" alt="Foster peters" /></a>
+          <a href="" class="link"
+            ><img src="./img/logo4.svg" alt="Foster peters"
+          /></a>
         </li>
         <li class="regular">
           <a href="" class="link"><img src="./img/logo5.svg" alt="Brand" /></a>
         </li>
-        <li class="regular" >
-          <a href="" class="link"><img src="./img/logo6.svg" alt="company nag line" /></a>
+        <li class="regular">
+          <a href="" class="link"
+            ><img src="./img/logo6.svg" alt="company nag line"
+          /></a>
         </li>
       </ul>
     </section>
     <!--footer  -->
     <footer class="footer">
-      <a href=""class="footer-logo"><span class="web-logo"> Web</span> Studio</a>
-       
+      <a href="" class="footer-logo"
+        ><span class="web-logo"> Web</span> Studio</a
+      >
+
       <address>
         <p class="adres text">г. Киев, пр-т Леси Украинки, 26</p>
-        <p ><a href=""class=" adres-title link" >info@example.com</a></p>
-        <p ><a href="" class="adres-title link" >+38 099 111 11 11</a></p>
+        <p><a href="" class="adres-title link">info@example.com</a></p>
+        <p><a href="" class="adres-title link">+38 099 111 11 11</a></p>
       </address>
 
       <p class="join-in">присоединяйтесь</p>
       <ul class="footer-title list">
-        <li><a href="" class="link color" aria-label="ссылка на Инстаграм">Инстаграм</a></li>
-        <li><a href=""  class="link color" aria-label="ссылка на Твитер">Твитер</a></li>
-        <li><a href=""  class="link color" aria-label="ссылка на Фейсбук ">Фейсбук</a></li>
-        <li><a href=""  class="link color" aria-label="ссылка на Линкеди">Линкедин</a></li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Инстаграм"
+            >Инстаграм</a
+          >
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Твитер">Твитер</a>
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Фейсбук "
+            >Фейсбук</a
+          >
+        </li>
+        <li>
+          <a href="" class="link color" aria-label="ссылка на Линкеди"
+            >Линкедин</a
+          >
+        </li>
       </ul>
 
       <p class="join-in text">подписаться на рассылку</p>
       <div>
         <input name="E-mail" type="text" value="E-mail" />
-        <button class="button">Подписаться</button> 
+        <button class="button">Подписаться</button>
       </div>
       <p class="adres-title">2020 | Developed by GoIT Students</p>
     </footer>
